--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 sudo: required
-dist: truty 
+dist: trusty 
 
 before_install:
   - cat /etc/apt/sources.list
@@ -8,7 +8,7 @@ before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y -t trusty-backports lxd
 
-language: python
-python:
-  - "2.6"
+language: generic
+# python:
+#  - "2.6"
 script: ./tests/test1.py
