--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,8 @@ sudo: required
 dist: trusty 
 
 before_install:
-  - cat /etc/apt/sources.list
-  - echo "deb http://archive.ubuntu.com/ubuntu trusty-backports main restricted universe multiverse" | sudo tee -a /etc/apt/sources.list
-  - cat /etc/apt/sources.list
   - sudo apt-get -qq update
-  - sudo apt-get install -y lxd
+  - sudo apt-get install -t trusty-backports -y lxd
 
 language: generic
-# python:
-#  - "2.6"
 script: ./tests/test1.py
