--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_install:
   - echo "deb http://archive.ubuntu.com/ubuntu trusty-backports main restricted universe multiverse" | sudo tee -a /etc/apt/sources.list
   - cat /etc/apt/sources.list
   - sudo apt-get -qq update
+  - sudo apt-get install -y python2.7
   - sudo apt-get install -t trusty-backports -y lxd
 
 language: generic
